<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="api_id">799167204742</string>
    <string name="app_name">BoaViagem</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_boa_viagem">BoaViagemActivity</string>
    <string name="title_activity_gasto">Gasto</string>
    <string name="user">Usuario</string>
    <string name="password">Senha</string>
    <string name="login">Log In</string>

    <string name="title_activity_dashboard">DashboardActivity</string>

    <!-- Resources of the BoaViagemActivity -->
    <string name="account_doesnt_exist">The account informed was not found</string>
    <string name="authentication_error">Usuário ou senha inválidos</string>
s
    <!-- Tela do Dashboard -->
    <string name="new_spent">Novo Gasto</string>
    <string name="new_travel">Nova viagem</string>
    <string name="my_travels">Minhas Viagens</string>
    <string name="settings">Configuracoes</string>

    <!-- Tela de cadastro de Nova Travel -->
    <string name="destiny">Destino</string>
    <string name="travel_type">Tipo da Viagem</string>
    <string name="fun">Lazer</string>
    <string name="business">Negocios</string>
    <string name="date_of_out">Data de Saida</string>
    <string name="date_of_arrived">Data de Chegada</string>
    <string name="choose">Selecione</string>
    <string name="budget">Orcamento</string>
    <string name="quantity_of_people">Quantidade de Pessoas</string>
    <string name="save">Salvar</string>
    <string name="title_activity_viagem">ViagemActivity</string>

    <!-- Tela de Cadastro de Novo Gasto -->
    <string name="value">Valor</string>
    <string name="date">Data</string>
    <string name="description">Descricao</string>
    <string name="spent">Gastei</string>
    <string name="category">Categoria</string>
    <string name="local">Local</string>

    <string-array name="category_spent">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

    <string name="title_activity_list">ListActivity</string>
    <string name="list_spent">Gastos realizados</string>

    <!-- Menu's do Sistema -->
    <string name="action_getout">Sair</string>
    <string name="delete_travel">Remover Viagem</string>
    <string name="remove">Remover</string>
    <string name="edit">Editar</string>
    <string name="options">Opções</string>
    <string name="confirmacao_exclusao_viagem">Deseja realmente excluir esta viagem?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="erro_selecionar_viagem">Erro ao selecionar Viagem</string>

    <!-- Mensagens de Transacoes do Banco de Dados -->
    <string name="success_save">Salvo com sucesso!</string>
    <string name="error_save">Erro ao tentar salvar.</string>
    <string name="new_note">New Note</string>
    <string name="title">Title</string>
    <string name="day">Day</string>
</resources>
