<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    >
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2" >
        <LinearLayout
            android:background="#015488"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_travel"
                android:textAppearance=
                    "?android:attr/textAppearanceLarge"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView android:text="@string/destiny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/destino"
            android:inputType="text" >
        </EditText>

        <TextView android:text="@string/travel_type"/>

        <RadioGroup
            android:id="@+id/tipoViagem"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/lazer"
                android:checked="true"
                android:text="@string/fun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/negocios"
                android:layout_marginLeft="30dp"
                android:text="@string/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <TableRow>

            <TextView
                android:layout_gravity="center"
                android:text="@string/date_of_arrived" />

            <TextView
                android:layout_gravity="center"
                android:text="@string/date_of_out" />

        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/dataChegada"
                android:onClick="selecionarData2"
                android:text="@string/choose" />
            <Button
                android:id="@+id/dataSaida"
                android:onClick="selecionarData2"
                android:text="@string/choose" />
        </TableRow>

        <TextView android:text="@string/budget" />
        <EditText
            android:id="@+id/orcamento"
            android:inputType="numberDecimal" />
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/quantity_of_people" />
            <EditText
                android:id="@+id/quantidadePessoas"
                android:inputType="number" />
        </TableRow>
        <Button
            android:onClick="saveTravel"
            android:text="@string/save" />
    </TableLayout>
</ScrollView>