<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical"
    tools:context="boaviagem.casadocodigo.com.br.boaviagem.view.DashboardActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488">

        <TextView
            android:id="@+id/novo_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/novo_gasto"
            android:onClick="selecionarOpcao"
            android:text="@string/new_spent"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nova_viagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/nova_viagem"
            android:onClick="selecionarOpcao"
            android:text="@string/new_travel"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_alignTop="@+id/novo_gasto"
            android:layout_alignEnd="@+id/configuracoes" />

        <!-- Novo Gasto e nova viagem -->
        <TextView
            android:id="@+id/minhas_viagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/minhas_viagens"
            android:onClick="selecionarOpcao"
            android:text="@string/my_travels"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/novo_gasto"
            android:layout_marginBottom="116dp" />

        <TextView
            android:id="@+id/configuracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/configuracoes"
            android:onClick="selecionarOpcao"
            android:text="@string/settings"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginEnd="39dp"
            android:layout_alignTop="@+id/minhas_viagens"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>
